fix auth service - disconnect from firebase
