# generated-sources/openapi/model/models.ts
@@ -1,3 +1,4 @@
+export * from './accessToken';
 export * from './bookDto';
 export * from './createUserDto';
 export * from './loginDto';
